# Reprove

./: .env.example  .gitignore  .reprove.yml  Dockerfile  LICENSE  README.md  compose.yaml  plan.md  pyproject.toml
.github/workflows/: reprove.yml  test.yml
benchmarks/: README.md  candidates.jsonl  swebench-shortlist.json
benchmarks/replay/: pytest_11706_regression.py
dashboard/: index.html
docs/: DEMO.md  DEVPOST.md  EVALUATION.md  INTEGRATIONS.md  OPERATIONS.md  PRODUCT_STRATEGY.md  demo-narration.txt
examples/seeded-repo/: README.md  fix.json  limit.py  pyproject.toml
outputs/: reprove-hackathon-deck.pptx  reprove-hackathon-deck.pptx.inspect.ndjson
reports/: public-issue-replay-pilot.json  swe-bench-pilot.json
reprove/: __init__.py  agents.py  api.py  audit.py  benchmark.py  bootstrap.py  cli.py  database.py  evaluation.py  evidence.py  execution.py  github.py  github_events.py  integrations.py  jobs.py  models.py  orchestrator.py  policy.py  providers.py  publication.py  redaction.py  reporting.py  runners.py  safety.py  security.py  store.py  worker.py  workflows.py
tests/: test_api.py  test_api_auth.py  test_audit.py  test_audit_api.py  test_benchmark.py  test_database_migrations.py  test_evidence.py  test_github.py  test_github_app.py  test_github_events.py  test_integrations.py  test_jobs.py  test_managed_runners.py  test_providers.py  test_publication.py  test_redaction.py  test_retention.py  test_runners.py  test_safety.py  test_sandbox.py  test_security.py  test_upgrade.py  test_upgrade_api.py  test_webhooks.py  test_workflows.py
(+7 files in other folders)
