[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reprove"
version = "0.1.0"
description = "Verification-first code maintenance: no fix without a failing test."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Reprove"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
reprove = "reprove.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["reprove*"]

