[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reprove"
version = "0.1.0"
description = "Verification-first code maintenance: no fix without a failing test."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Reprove"}]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
web = ["httpx>=0.27"]

[project.scripts]
reprove = "reprove.cli:main"
reprove-api = "reprove.api:main"
reprove-worker = "reprove.worker:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["reprove*"]
